# MetaForge

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.librechat.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  script_new.step
.claude/: settings.local.json
.claude/commands/: implement-l1-next.md
.github/workflows/: docs.yml  release.yml
api_gateway/: __init__.py  server.py
api_gateway/assistant/: apply.py  approval.py  proposal_recorder.py  routes.py  schemas.py
api_gateway/bom/: __init__.py  routes.py
api_gateway/chat/: __init__.py  activity.py  backend.py  harness_backend.py  routes.py  schemas.py  streaming.py
api_gateway/compliance/: __init__.py  routes.py
api_gateway/constraint/: __init__.py  freecad_client.py  kinematics.py  routes.py
api_gateway/convert/: __init__.py  routes.py  schemas.py  service.py
api_gateway/db/: models.py  repository.py
api_gateway/harness/: __init__.py  routes.py
api_gateway/knowledge/: routes.py
api_gateway/memory/: __init__.py  routes.py  schemas.py
api_gateway/projects/: __init__.py  backend.py  routes.py  schemas.py
api_gateway/runs/: __init__.py  flow_brain.py  gate_eval.py  mech_handlers.py  routes.py  schemas.py  streaming.py
api_gateway/sessions/: __init__.py  backend.py  routes.py  schemas.py
api_gateway/twin/: blob_store.py  decision_recorder.py  file_link.py  geometry_recorder.py  import_service.py  routes.py  schemas.py  version_service.py
cli/forge_cli/: __main__.py  chat.py  client.py  codex_login.py  config.py  hooks.py  ingest.py  knowledge.py  main.py  memory.py  routines.py  runs.py  sources.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
deploy/librechat/: .env.example  README.md  librechat.yaml
digital_twin/assistant/: reconciler.py
digital_twin/context/: __init__.py  assembler.py  identity_resolver.py  models.py  simulation_capture.py  staleness.py
digital_twin/datasheets/: __init__.py  package_spec.py  parser.py  tables.py
digital_twin/knowledge/: bom_populator.py  chunker.py  consumer.py  hybrid_search.py  lightrag_service.py  llm_property_extractor.py  models.py  openrouter_lightrag.py  openrouter_property_llm.py  property_extractor.py  reranker.py  service.py  store.py  templates.py
digital_twin/memory/: __init__.py  client.py  consumer.py  embeddings.py  event_embedder.py  experience_recorder.py  importance.py  models.py  pgvector_store.py  store.py
digital_twin/storage/: __init__.py  kb_storage.py  minio_adapter.py  work_product_blobs.py
digital_twin/thread/: __init__.py
docs/: architecture.md  capability-matrix.md  cli-reference.md  dashboard-tour.md  getting-started.md  harness-codex-subscription.md  index.md  project-structure.md  session-capture.md  skill_spec.md  testing-strategy.md  troubleshooting.md  twin_schema.md
docs/architecture/: design-flow-harness.md  knowledge-ingestion-playbook.md  migrations.md  neo4j-migration.md  robust-harness-design.md
docs/integrations/: claude-code.md  lightrag-ui.md
docs/knowledge/: datasheet-ingestion.md
docs/planning/: KNOWLEDGE-MATURITY-ROADMAP.md
docs/plans/: l1-implementation.md
docs/reference/: gateway-api.md  openapi.json
docs/research/: simulator-landscape-catalog.md
docs/runbooks/: cloudflare-mcp-tunnel.md  neo4j-unreachable.md
docs/stylesheets/: brand.css
docs/testing/: uat-iot-sensor-board.md  uat-quick-reference.md
docs/uat/: cycle3-knowledge-ssot-test-run-2026-04-30.md  kb-test-plan.md  met-346-adoption-checklist-2026-05-10.md  uat-claude-driven-tier1-cadquery-report-2026-04-28.md  uat-claude-driven-tier1-calculix-report-2026-04-28.md  uat-claude-driven-tier1-knowledge-report-2026-04-27.md
domain_agents/: __init__.py  base_agent.py
domain_agents/compliance/: __init__.py  agent.py  checklist_generator.py  evidence_tracker.py  models.py
domain_agents/electronics/: agent.py  pydantic_ai_agent.py
domain_agents/firmware/: __init__.py  agent.py  pydantic_ai_agent.py
domain_agents/mechanical/: __init__.py  agent.py  pydantic_ai_agent.py
domain_agents/shared/: experience_recorder.py
domain_agents/simulation/: __init__.py  agent.py  pydantic_ai_agent.py
domain_agents/supply_chain/: __init__.py  agent.py  alt_parts.py  models.py  risk_scorer.py
examples/drone_flight_controller/: PRD.md  README.md  constraints.json  decisions.md  demo_full_pipeline.py  demo_validate_stress.py  drone-fc.kicad_sch
mcp_core/: __init__.py  progress.py  transports.py  versioning.py
metaforge/: __init__.py
metaforge/mcp/: __init__.py  __main__.py  capture.py  oauth.py  server.py
observability/: __init__.py  alertmanager.yaml  alloy-config.alloy  grafana-datasources.yml  loki.yaml  metrics.py  otel-collector-config.yaml  tempo.yaml
observability/alerting/: rules.yaml
observability/runbooks/: neo4j_unreachable.md
observability/slo/: __init__.py  calculator.py  definitions.py
orchestrator/: __init__.py  dependency_engine.py  iteration_controller.py  scheduler.py  temporal_worker.py  workflow_dag.py
orchestrator/activities/: __init__.py  approval_activity.py  base_activity.py  electronics_activity.py  firmware_activity.py  (+2 more)
scripts/: build_forge_binary.sh  gen_openapi.py  install.sh  run_tier1_cadquery_validator_surrogate.py  run_tier1_calculix_validator_surrogate.py  run_tier1_knowledge_validator_surrogate.py
skill_registry/: __init__.py  bridge_factory.py  mcp_bridge.py  mcp_client_bridge.py  registry.py  registry_bridge.py  skill_base.py
tests/: conftest.py
tool_registry/: __init__.py  bootstrap.py  container_runtime.py  registry.py
tools/session_capture/: __init__.py  claude_code_adapter.py  installer.py  metaforge_capture.py  parsers.py  pyproject.toml
tools/session_capture/claude_code/: README.md  settings.snippet.json
twin_core/: CLAUDE.md  api.py  graph_engine.py  neo4j_graph_engine.py
(+722 files in other folders)
