[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twin_core", "mcp_core", "skill_registry", "tool_registry", "domain_agents", "orchestrator", "api_gateway", "observability", "digital_twin", "metaforge"]

[project]
name = "metaforge"
version = "0.1.0"
description = "Local-first control plane for hardware design"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    # ``pydantic-ai`` (the umbrella) pulls every provider's extras
    # (gradio, xai-sdk, vertex, bedrock, …) and the resolver backtracks
    # forever (MET-377). MetaForge only uses the openai + anthropic
    # providers — pin the slim variant with just those, so Docker
    # builds finish in minutes not hours.
    "pydantic-ai-slim[openai,anthropic]>=0.1",
    "structlog>=24.0",
    # Cap below FastAPI 0.137 / Starlette 1.0: Starlette 1.x wraps
    # ``include_router`` results in ``_IncludedRouter`` objects without a
    # ``.path``, breaking ``app.routes`` introspection that the route tests
    # (and gateway wiring assumptions) rely on. Pin to the 0.x line until a
    # deliberate Starlette 1.x migration (MET-502).
    "fastapi>=0.100,<0.137",
    "starlette<1.0",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # ``aiohttp`` is used directly by ``mcp_core.transports.HttpTransport``
    # to call remote MCP adapters. Was a transitive of the old umbrella
    # ``pydantic-ai`` dep — pin explicitly now that we use the slim
    # variant (MET-377).
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

[project.scripts]
forge = "cli.forge_cli.main:main"
forge-server = "api_gateway.server:main"

[project.optional-dependencies]
neo4j = [
    "neo4j>=5.0",
]
kafka = [
    "aiokafka>=0.9",
]
assistant = [
    "watchfiles>=0.21",
]
build = [
    # Standalone `forge` CLI binary — see scripts/build_forge_binary.sh
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
    # Pulled in so unit tests like ``test_pg_backend.py`` (which use
    # in-process sqlite via ``aiosqlite``) run without extra setup. The
    # production Postgres dependency stays under the ``[postgres]`` /
    # ``[gateway]`` extras.
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    # Used by scripts/datasheets/fetch_and_extract.py to extract text
    # from real public datasheet PDFs into committed text fixtures
    # under tests/fixtures/datasheets/. Decoupled from the production
    # PDF ingest path (MET-399) — fixture prep only.
    "pdfplumber>=0.10",
    # Documentation site (docs/ -> https://metaforge-ha.github.io/MetaForge/).
    # Built locally with `mkdocs serve` and on push-to-main by
    # .github/workflows/docs.yml.
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.0",
]
temporal = [
    "temporalio>=1.5",
]

knowledge = [
    "asyncpg>=0.29",
    "pgvector>=0.2",
    "sentence-transformers>=2.0",
    # L1 framework — see ADR-008. ``lightrag-hku`` is the production
    # backend behind the ``KnowledgeService`` Protocol; ``raganything``
    # supplies the multimodal ingest path (PDF, images) parked behind
    # P1.13.
    "lightrag-hku>=1.4",
    "raganything>=1.2",
    # Used by digital_twin.context.models for token-budget enforcement
    # (MET-317). Already a transitive of lightrag-hku — hoisted explicit
    # so the context layer doesn't depend on LightRAG just for tokens.
    "tiktoken>=0.7",
    # MET-476: MinIO/S3 client for the KB object-storage source of truth.
    # ``MinIOKBStorage`` lazy-imports this — environments without it use
    # ``InMemoryKBStorage`` (tests, local dev).
    "minio>=7.2",
]
cadquery = [
    "cadquery>=2.4.0",
]
postgres = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]
docker = [
    "docker>=7.0",
]
# All extras needed for the Docker gateway image
gateway = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "neo4j>=5.0",
    "pgvector>=0.2",
    "sentence-transformers>=2.0",
    "lightrag-hku>=1.4",
    "raganything>=1.2",
    # MET-483: the gateway is the MinIO source-of-truth for work-product
    # blobs (Planner data-modalities.md), so it needs the client. Was
    # only in [knowledge], leaving the built gateway image unable to
    # import ``minio`` — MinIOKBStorage silently fell back / errored.
    "minio>=7.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "perf: opt-in latency/throughput baselines; not run in default CI (MET-477 Phase 6)",
]
# Phase 6: exclude perf tests from the default `pytest` invocation. Opt in
# with `pytest -m perf` (or set METAFORGE_PERF_TESTS=1 to belt-and-braces).
addopts = "-m 'not perf'"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
check_untyped_defs = true
exclude = [
    "cli/",
    "ide_assistants/",
    "dashboard/",
    "examples/",
    "tools/",
    "docs/",
    "venv/",
    "build/",
    "dist/",
]
ignore_missing_imports = true
